syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.gustavoflor.wsg.protobuf";

import "google/protobuf/timestamp.proto";
import "user.proto";

message Wallet {
  string description = 1;
  WalletStatus status = 2;
  double available = 3;
  double saved = 4;
  double blocked = 5;
  User user = 6;
  repeated string tags = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

enum WalletStatus {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}
